--- a/Styles/style.css
+++ b/Styles/style.css
@@ -7,3 +7,81 @@
   font-weight: 400;
   font-style: normal;
 }
+
+ /* shared styles */
+    .display-flex {
+        display: flex;
+    }
+
+    /* dark 02 */
+    .text-gray {
+        color: #424242;
+    }
+
+    /* dark 03 */
+    .text-light-gray {
+        color: #727272;
+    } 
+    /* background color */
+    .bg-light {
+        background-color: rgba(255, 144, 14, 0.1);
+    }
+   
+    .btn-primary {
+      background-color: rgba(255, 144, 14, 1);  
+      padding: 20px 25px;
+      color: #ffffff;
+      font-size: 1.25rem;
+      font-weight: 600;
+      border-radius: 8px;
+      border: none;
+    }
+
+ /* header style */
+
+ /* navbar related style */
+
+.navbar {
+    justify-content: space-between;
+    align-items: center;
+}
+.brand {
+    font-weight: 700;
+    font-size: 3rem;
+}
+ .nav-item {
+    list-style: none;
+    margin-right: 30px;
+ }
+
+ .nav-link {
+    text-decoration: none;
+    font-weight: 500;
+ }
+ .navbar , .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+ }
+
+ /* banner related style */
+ .banner-content {
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+
+ }
+ .banner-title {
+    font-size: 4rem;
+    font-weight: 700;
+ }
+ .banner-image {
+    width: 100%;
+ }
+
+ /* Responsive media Query */
+ @media screen and (max-width:576px) {
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
+ }
