--- a/Styles/style.css
+++ b/Styles/style.css
@@ -36,6 +36,17 @@
       border-radius: 8px;
       border: none;
     }
+    main {
+        max-width: 1440px;
+        margin: 0, auto;
+    }
+
+    main > section {
+        margin-top: 130px;
+    }
+    .text-primary {
+        color: #FF900E;
+    }
 
  /* header style */
 
@@ -78,6 +89,30 @@
  .banner-image {
     width: 100%;
  }
+
+ /* Teams and feature related style */
+ .teams {
+    align-items: center;
+ }
+ .team-img-container {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+    margin-left: 130px;
+ }
+ .our-features {
+    margin-left:130px;
+    max-width: 530px;
+ }
+.feature-title {
+    font-size: 2.8rem;
+}
+#quick-list {
+    font-weight: 500;
+}
+#quick-feature {
+    font-weight: bold;
+}
 
  /* Responsive media Query */
  @media screen and (max-width:576px) {
