--- a/Styles/style.css
+++ b/Styles/style.css
@@ -38,11 +38,15 @@
     }
     main {
         max-width: 1440px;
-        margin: 0, auto;
+        margin: 0 auto;
     }
 
     main > section {
         margin-top: 130px;
+    }
+    .section-title {
+         font-size: 2.8rem;
+         font-weight: 700;
     }
     .text-primary {
         color: #FF900E;
@@ -104,9 +108,7 @@
     margin-left:130px;
     max-width: 530px;
  }
-.feature-title {
-    font-size: 2.8rem;
-}
+
 #quick-list {
     font-weight: 500;
 }
@@ -114,9 +116,72 @@
     font-weight: bold;
 }
 
+/* card style */
+.facts-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 24px;
+    justify-content: center;
+}
+
+.fact-card {
+    border: 2px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.fact-number {
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name {
+  font-weight: 600;
+  font-size: 1.25rem;  
+  margin-top: 10px;
+}
+.fact-description {
+    max-width: 541px;
+}
+
+/* Sponsor related style */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
  /* Responsive media Query */
  @media screen and (max-width:576px) {
-    .navbar, .nav-links{
+    .navbar, 
+    .nav-links,
+    .teams{
         flex-direction: column;
+    }
+    .team-img-container, .facts-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features {
+        margin-left:20px ;
+    }
+ }
+
+ /* Medium Device  */
+ @media screen and (min-width:576px) and (max-width:992px) {
+    .teams {
+        flex-direction: column;
+    }
+    .our-features {
+        margin: 20px auto;
+    }
+    .facts-container {
+        grid-template-columns: repeat(2, 1fr);
     }
  }
