Create a beatuful responsive single page website

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -115,7 +115,39 @@
 #quick-feature {
     font-weight: bold;
 }
+/* feature section related style */
+.features {
+    gap: 140px;
+}
+#feature-section-title {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+.feature-card .feature-title {
+    font-weight: 600;
+    font-size: 1.25rem;
+}
+.feature-card {
+    padding: 18px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 10px;
+}
 
+#experience-badge {
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-top: -100px;
+    margin-left: -100px;
+}
+#experience-year {
+    font-size: 4rem;
+    font-weight: 700;
+}
+.featured-architect img {
+    width: 100%;
+}
 /* card style */
 .facts-container {
     display: grid;
@@ -161,10 +193,30 @@
 .sponsor-companies {
     filter: grayscale(100%);
 }
+.footer-wrapper {
+    display: flex;
+    justify-content: center;
+    padding: 40px 16px;
+
+}
+.footer {
+    width: 100%;
+    max-width: 1440px;
+    background-color: #FFF4E7;
+    padding: 20px 40px;
+    border-radius: 8px;   
+}
+.footer p {
+    margin: 0;
+    font-size: 14px;
+    text-align: center;
+    line-height: 1.6;
+}
  /* Responsive media Query */
  @media screen and (max-width:576px) {
     .navbar, 
     .nav-links,
+    .features,
     .teams{
         flex-direction: column;
     }
@@ -179,6 +231,10 @@
     } 
     .our-features {
         margin-left:20px ;
+    }
+    #experience-badge {
+        margin-top: 20px;
+        margin-left: 20px;
     }
  }
 
